2007-09-03 [paul]	0.2.8

	0.2.8 released

2007-09-03 [paul]	0.2.7cvs7

	* po/ca.po
	* po/es.po
	* po/fi.po
	* po/hu.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Flammie Pirinen, Pader Rezso

2007-08-16 [paul]	0.2.7cvs6

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-31 [paul]	0.2.7cvs5

	* autogen.sh
	* configure.ac
	* src/attachwarner.c
	* src/attachwarner.h
	* src/attachwarner_prefs.c
		fix crash
		thanks to Colin

2007-07-31 [colin]	0.2.7cvs4

	* src/attachwarner.c
		Fix possible namespace clash

2007-07-24 [mones]	0.2.7cvs3

	* COPYING
	* src/attachwarner.c
	* src/gettext.h
		Change license to GPLv3

2007-07-11 [colin]	0.2.7cvs2

	* src/attachwarner.c
		Specify license better (GPL2+)

2007-07-07 [paul]	0.2.7cvs1

	* po/fi.po
		updated by Flammie Pirinen

2007-07-03 [paul]	0.2.7

	0.2.7 released

2007-07-03 [paul]	0.2.6cvs2

	* po/hu.po
		updated by Pader Rezso

2007-06-21 [colin]	0.2.6cvs1

	* src/attachwarner.c
	* src/attachwarner.h
		Update plugin API

2007-04-16 [paul]	0.2.6

	0.2.6 released

2007-04-16 [paul]	0.2.5cvs4

	* configure.ac
	* po/sr.po
		added Serbian translation by Aleksandar Urosevic

2007-04-16 [paul]	0.2.5cvs3

	* po/ca.po
	* po/es.po
	* po/hu.po
	* po/pt_BR.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Pader Rezso, and Frederico Goncalves Guimaraes

2007-03-05 [wwp]	0.2.5cvs2

	* config/.cvsignore
		More files to ignore.

2007-03-03 [paul]	0.2.5cvs1

	* configure.ac
	* po/cs.po
		added Czech translation, submitted by Tim <timbrain@post.cz> 

2007-02-26 [paul]	0.2.5

	0.2.5 released

2007-02-26 [paul]	0.2.4cvs3

	* Makefile.am
	* configure.ac
	* config/Makefile.am
	* config/config.rpath
	* config/mkinstalldirs
		add missing config/ infrastructure (needed
		for automake 1.10)
	* po/ca.po
	* po/de.po
	* po/pl.po
		added new translations by Miquel Oliete, Stephan
		Sachse, and Pawel Pekala
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/pt_BR.po
	* po/sk.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,