@@ -26,3 +26,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 autogen.sh;  cvs diff -u -r 1.1.2.35 -r 1.1.2.36 configure.ac;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/attachwarner.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/attachwarner.h;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/attachwarner_prefs.c;  ) > 0.2.7cvs5.patchset
 ( cvs diff -u -r 1.1.2.36 -r 1.1.2.37 configure.ac;  ) > 0.2.7cvs6.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/ca.po;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/es.po;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/fi.po;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/hu.po;  ) > 0.2.7cvs7.patchset
+( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/attachwarner.c;  ) > 0.2.8cvs1.patchset
